Fix titles in expansion panel getting cut off

--- a/src/app/components/content/app-updates/updates.component.scss
+++ b/src/app/components/content/app-updates/updates.component.scss
@@ -39,7 +39,7 @@
     }
 
     mat-panel-title {
-      height: 16px;
+      height: 18px;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
